Bug 57640 - Auto capitalization for letters dž lj nj dz wrong
Summary: Auto capitalization for letters dž lj nj dz wrong
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.0.0 target:3.6.5 target:25.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-28 05:59 UTC by Urmas
Modified: 2024-07-16 06:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2012-11-28 05:59:15 UTC
1. Begin a sentence with a letter like dž.
2. Autoreplace will change it to DŽ, instead of Dž.
Comment 1 Roman Eisele 2012-11-28 11:25:00 UTC
Thank you for your bug report!

REPRODUCIBLE with all LibreOffice versions since 3.3.0, including 3.6.4.1, on Mac OS X 10.6.8 (Intel).

This is true at least for the following characters from Unicode areas “Latin Extended B”:
dž lj nj dz
should become
Dž Lj Nj Dz
but become
DŽ LJ NJ DZ
instead.
Comment 2 Roman Eisele 2012-11-28 11:35:13 UTC
@ Caolán:

This is a minor issue, and probably a very old one; but maybe it is easy to fix -- just some error in some replacement table, or similar? I CC you because you have fixed some similar bugs; so feel free to take a look at this issue, or just ignore it (I know you got many much more important things to do) ;-)

Thank you very much!
Comment 3 Caolán McNamara 2012-11-28 14:23:02 UTC
something somewhere is using toupper on the character rather than totitle
Comment 4 Not Assigned 2012-11-28 15:15:40 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=150e32777c99a5d67a51726972f46c06dae8a6ac

Resolves: fdo#57640 we really want to *titlecase* the initial character



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Roman Eisele 2012-11-28 15:47:48 UTC
@ Caolán:

Wow -- incredible! I hoped that you would come up with a solution easily, but I did not expect that it would be so fast. Thank you very much!

Would it be reasonable to backport this fix to the 3.6 branch?
Comment 6 Not Assigned 2012-11-29 09:28:22 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=85549899ad814f401449dff9f0b57ccc25cca14a&g=libreoffice-3-6

Resolves: fdo#57640 we really want to *titlecase* the initial character


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Roman Eisele 2012-11-29 09:55:28 UTC
(In reply to comment #6)
> Caolan McNamara committed a patch related to this issue.
> It has been pushed to "libreoffice-3-6": [...]
> It will be available in LibreOffice 3.6.5.

Thank you again!
Comment 8 Roman Eisele 2012-12-13 08:44:46 UTC
VERIFIED as FIXED on Mac OS X (10.6.8, Intel) with

  LOdev 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)
  TinderBox: MacOSX TDF Release, Branch:libreoffice-4-0,
  Time: 2012-12-05_22:13:37

i.e. our official 4.0beta1. Auto-capitalization now works fine for all digraphs from “Latin Extended B”: dž lj nj dz now become Dž Lj Nj Dz, as expected.


@Caolán:
Thank you very much for fixing this issue!
Comment 9 Commit Notification 2024-07-16 06:43:50 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f31d940b3777018f385541eed351f859a58c1989

tdf#57640: sw_autocorrect: Add unittest

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.